# gtk-im-bridge

./: .gitignore  CHANGES_GTK3.md  GTK3_GTYPE_MODULE_FIX.md  PLAN.md  README.md  meson.build  meson_options.txt
gtk3/: meson.build
gtk4/: meson.build
simple-app/: meson.build
simple-app-gtk3/: meson.build  simple-app-gtk3.c
simple-app-gtk4/: meson.build  simple-app-gtk4.c
src/: ibus-setup.c  ibus-setup.h  im-bridge-minimal.c  im-bridge.c  im-bridge.h  logging.c  logging.h  module.c
tests/: TEST_DYNAMIC_LOAD.md  meson.build  test-dynamic-load.c  test-simple-app.sh  test_runtime.c
tools/: meson.build
tools/list-gtk-im-modules/: list-gtk-im-modules.c  meson.build
tools/list-gtk4-im-modules/: list-gtk4-im-modules.c  meson.build
